# cqf

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
apps/: CMakeLists.txt  main.cpp
cqf/: CMakeLists.txt  CQFGetter.cpp  CountingQF.cpp  filterUtils.cpp  testFunctions.cpp
cqf/headers/: CQFGetter.hpp  CountingQF.hpp  filterUtils.hpp  testFunctions.hpp  testSuite.hpp
cqf/tests/: testSuite.cpp  testSuite.hpp
src/: CMakeLists.txt  CountingQF.cpp  main.cpp  testFunctions.cpp
src/headers/: CMakeLists.txt  CountingQF.hpp  testFunctions.hpp
